Fix spacing in projects section

--- a/styles/_sections/_projects.scss
+++ b/styles/_sections/_projects.scss
@@ -147,13 +147,7 @@
 }
 
 .works__projects {
-  margin-top: 118px;
-
-  @media (min-width: 768px) {
-    margin-top: 74px;
-  }
-
   @media (min-width: 992px) {
-    margin-top: 112px;
+    margin-top: 30px;
   }
 }
